# word_freq

./: CMakeLists.txt  Dockerfile  README.md
banchmark/: CMakeLists.txt
banchmark/src/: banchmark.cpp
examples/: text.txt
src/: helper.h  main.cpp  test.cpp  word_counter.h
src/stream/: icu_utf_input_stream.h  utf8_input_stream.h  utf_convertor.cpp  utf_convertor.h  utf_input_stream.h  utf_input_stream_simple.h
test/: CMakeLists.txt
test/data/multi-words/: china-ru-en.txt  only-ascii.txt
test/data/no-words/: non-alphabetic.txt
test/src/: test.cpp
